--- a/main-notebook.ipynb
+++ b/main-notebook.ipynb
@@ -1,6 +1,191 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "dfdfc7e3",
+   "metadata": {},
+   "source": [
+    "This notebook looks into using various Python based machine learning and data science libraries in an attempt to build a machine learning model capable of predicting whether or not someone has heart disease on their medical attributes.\n",
+    "\n",
+    "We're going to follow the following approach:\n",
+    "1. Problem Definition\n",
+    "2. Data\n",
+    "3. Evaluation\n",
+    "4. Features\n",
+    "5. Modelling\n",
+    "6. Experimentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca8fe4ab",
+   "metadata": {},
+   "source": [
+    "## **1. Problem Definition**\n",
+    "\n",
+    "In a statement,\n",
+    "> Given clinical parameters about a patient, can we predict if they have a heart disease or not ?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b16d470b",
+   "metadata": {},
+   "source": [
+    "## **2. Data**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17b1080",
+   "metadata": {},
+   "source": [
+    "The original data came from Cleaveland data from the UCI Machine Learning Repository.\n",
+    "> https://archive.ics.uci.edu/dataset/45/heart+disease"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7085ad2e",
+   "metadata": {},
+   "source": [
+    "## **3. Evaluation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6180c904",
+   "metadata": {},
+   "source": [
+    "## **4. Features**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0451712a",
+   "metadata": {},
+   "source": [
+    "Features are different parts of the data. During this step, you'll want to start finding out what you can about the data.\n",
+    "\n",
+    "One of the most common ways to do this, is to create a **data dictionary**.\n",
+    "\n",
+    "### Heart Disease Data Dictionary\n",
+    "\n",
+    "A data dictionary describes the data you're dealing with. Not all datasets come with them so this is where you may have to do your research or ask a **subject matter expert** (someone who knows about the data) for more.\n",
+    "\n",
+    "The following are the features we'll use to predict our target variable (heart disease or no heart disease).\n",
+    "\n",
+    "1. age - age in years \n",
+    "2. sex - (1 = male; 0 = female) \n",
+    "3. cp - chest pain type \n",
+    "    * 0: Typical angina: chest pain related decrease blood supply to the heart\n",
+    "    * 1: Atypical angina: chest pain not related to heart\n",
+    "    * 2: Non-anginal pain: typically esophageal spasms (non heart related)\n",
+    "    * 3: Asymptomatic: chest pain not showing signs of disease\n",
+    "4. trestbps - resting blood pressure (in mm Hg on admission to the hospital)\n",
+    "    * anything above 130-140 is typically cause for concern\n",
+    "5. chol - serum cholestoral in mg/dl \n",
+    "    * serum = LDL + HDL + .2 * triglycerides\n",
+    "    * above 200 is cause for concern\n",
+    "6. fbs - (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false) \n",
+    "    * '>126' mg/dL signals diabetes\n",
+    "7. restecg - resting electrocardiographic results\n",
+    "    * 0: Nothing to note\n",
+    "    * 1: ST-T Wave abnormality\n",
+    "        - can range from mild symptoms to severe problems\n",
+    "        - signals non-normal heart beat\n",
+    "    * 2: Possible or definite left ventricular hypertrophy\n",
+    "        - Enlarged heart's main pumping chamber\n",
+    "8. thalach - maximum heart rate achieved \n",
+    "9. exang - exercise induced angina (1 = yes; 0 = no) \n",
+    "10. oldpeak - ST depression induced by exercise relative to rest \n",
+    "    * looks at stress of heart during excercise\n",
+    "    * unhealthy heart will stress more\n",
+    "11. slope - the slope of the peak exercise ST segment\n",
+    "    * 0: Upsloping: better heart rate with excercise (uncommon)\n",
+    "    * 1: Flatsloping: minimal change (typical healthy heart)\n",
+    "    * 2: Downslopins: signs of unhealthy heart\n",
+    "12. ca - number of major vessels (0-3) colored by flourosopy \n",
+    "    * colored vessel means the doctor can see the blood passing through\n",
+    "    * the more blood movement the better (no clots)\n",
+    "13. thal - thalium stress result\n",
+    "    * 1,3: normal\n",
+    "    * 6: fixed defect: used to be defect but ok now\n",
+    "    * 7: reversable defect: no proper blood movement when excercising \n",
+    "14. target - have disease or not (1=yes, 0=no) (= the predicted attribute)\n",
+    "\n",
+    "**Note:** No personal identifiable information (PPI) can be found in the dataset.\n",
+    "\n",
+    "It's a good idea to save these to a Python dictionary or in an external file, so we can look at them later without coming back here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cd3f0c9",
+   "metadata": {},
+   "source": [
+    "### **Tools**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c027847a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing all the tools we need in one block.\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "\n",
+    "#we want to keep our plots inside the notebook\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Import models from sklearn\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    " \n",
+    "# Model evaluation\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import RocCurveDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d22e7980",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
