--- a/main-notebook.ipynb
+++ b/main-notebook.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "7e21730e",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "ab97ab8a",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "056d8d59",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1297,7 @@
        "3         7  16"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "c6a6dae9",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "d21c25a5",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1681,7 @@
        "target   -0.344029  1.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "b0f915f0",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1703,7 @@
        "(14.5, -0.5)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1736,9 +1736,526 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44cf9c83",
+   "metadata": {},
+   "source": [
+    "## **5. Modelling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "33ca0312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   3       145   233    1        0      150      0      2.3      0   \n",
+       "1   37    1   2       130   250    0        1      187      0      3.5      0   \n",
+       "2   41    0   1       130   204    0        0      172      0      1.4      2   \n",
+       "3   56    1   1       120   236    0        1      178      0      0.8      2   \n",
+       "4   57    0   0       120   354    0        1      163      1      0.6      2   \n",
+       "\n",
+       "   ca  thal  target  \n",
+       "0   0     1       1  \n",
+       "1   0     2       1  \n",
+       "2   0     2       1  \n",
+       "3   0     2       1  \n",
+       "4   0     2       1  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d100ad43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting into X and y\n",
+    "X = df.drop('target', axis=1)\n",
+    "y = df.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ae47d8d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting into train and test set\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1fed887e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>295</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>270</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>231</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>147</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>135</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>161</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>117</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>140</td>\n",
+       "      <td>233</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>94</td>\n",
+       "      <td>227</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>160</td>\n",
+       "      <td>234</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>140</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>179</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>242 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+       "132   42    1   1       120   295    0        1      162      0      0.0   \n",
+       "202   58    1   0       150   270    0        0      111      1      0.8   \n",
+       "196   46    1   2       150   231    0        1      147      0      3.6   \n",
+       "75    55    0   1       135   250    0        0      161      0      1.4   \n",
+       "176   60    1   0       117   230    1        1      160      1      1.4   \n",
+       "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+       "188   50    1   2       140   233    0        1      163      0      0.6   \n",
+       "71    51    1   2        94   227    0        1      154      1      0.0   \n",
+       "106   69    1   3       160   234    1        0      131      0      0.1   \n",
+       "270   46    1   0       120   249    0        0      144      0      0.8   \n",
+       "102   63    0   1       140   195    0        1      179      0      0.0   \n",
+       "\n",
+       "     slope  ca  thal  \n",
+       "132      2   0     2  \n",
+       "202      2   0     3  \n",
+       "196      1   0     2  \n",
+       "75       1   0     2  \n",
+       "176      2   2     3  \n",
+       "..     ...  ..   ...  \n",
+       "188      1   1     3  \n",
+       "71       2   1     3  \n",
+       "106      1   1     2  \n",
+       "270      2   0     3  \n",
+       "102      2   2     2  \n",
+       "\n",
+       "[242 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a46c6ccb",
+   "metadata": {},
+   "source": [
+    "Now we have our data into training and test split, its time to build the model.\n",
+    "\n",
+    "We will train it (Finding patterns) on the training set\n",
+    "\n",
+    "And we'll test it (use patterns) on the test set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed902086",
+   "metadata": {},
+   "source": [
+    "We will try and use 3 kinds of models and select which suits best\n",
+    "\n",
+    "1. Logistic Regression\n",
+    "2. K-Nearest Neighbours Classifier\n",
+    "3. Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8abc45c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {\"Logistic Regression\" : LogisticRegression(),\n",
+    "          \"KNN\" : KNeighborsClassifier(),\n",
+    "          \"Random Forest\" : RandomForestClassifier()}\n",
+    "\n",
+    "# Creating a function to fit and score on the models\n",
+    "def fit_n_score(models, X_train, y_train, X_test, y_test) :\n",
+    "    \"\"\"\n",
+    "    Fits and evaluates the given machine learning models.\n",
+    "    model : A dictionary of different Scikit learn machine learning models.\n",
+    "    X_train: Training data (No labels)\n",
+    "    X_test : Test data (no labels)\n",
+    "    y_train : Training labels\n",
+    "    y_test : Testing labels\n",
+    "    \"\"\"\n",
+    "\n",
+    "    np.random.seed(42)\n",
+    "    \n",
+    "    # Making a dictionary to store model scores\n",
+    "    model_scores = {}\n",
+    "\n",
+    "    # Loop through models\n",
+    "    for name, model in models.items():\n",
+    "\n",
+    "        # Fitting data in the model \n",
+    "        model.fit(X_train, y_train)\n",
+    "\n",
+    "        # Evaluate model\n",
+    "        model_scores[name] = model.score(X_test, y_test)\n",
+    "\n",
+    "    return model_scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44cf9c83",
+   "id": "e93e85ad",
    "metadata": {},
    "outputs": [],
    "source": []
