--- a/main-notebook.ipynb
+++ b/main-notebook.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c027847a",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c0031aec",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1a7ba056",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "(303, 14)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4b359e10",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
        "[303 rows x 14 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "59a045a1",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "acc3c581",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "78003867",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4bf8b171",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "18b5e5cc",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
        "Name: sex, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c0401ec5",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1066,7 @@
        "1       72   93"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5cf38eb2",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7e21730e",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ab97ab8a",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "056d8d59",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1297,7 @@
        "3         7  16"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c6a6dae9",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d21c25a5",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1681,7 @@
        "target   -0.344029  1.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b0f915f0",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1703,7 @@
        "(14.5, -0.5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "33ca0312",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1892,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d100ad43",
    "metadata": {},
    "outputs": [],
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "ae47d8d7",
    "metadata": {},
    "outputs": [],
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "1fed887e",
    "metadata": {},
    "outputs": [
@@ -2180,7 +2180,7 @@
        "[242 rows x 13 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2215,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "8abc45c4",
    "metadata": {},
    "outputs": [],
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "e93e85ad",
    "metadata": {},
    "outputs": [
@@ -2283,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "32254d20",
    "metadata": {},
    "outputs": [
@@ -2295,7 +2295,7 @@
        " 'Random Forest': 0.8360655737704918}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "d50e22d6",
    "metadata": {},
    "outputs": [
@@ -2324,7 +2324,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2387,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "24d68b70",
    "metadata": {},
    "outputs": [],
@@ -2419,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "7e7906ad",
    "metadata": {},
    "outputs": [
@@ -2448,7 +2448,7 @@
        " 0.6694214876033058]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "de9508c1",
    "metadata": {},
    "outputs": [
@@ -2488,7 +2488,7 @@
        " 0.6557377049180327]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2499,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "c48e0f85",
    "metadata": {},
    "outputs": [
@@ -2546,6 +2546,254 @@
    "cell_type": "markdown",
    "id": "67de0a65",
    "metadata": {},
+   "source": [
+    "## **8. Hyperparameter Tuning using RandomizedSearchCV**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be2cff2b",
+   "metadata": {},
+   "source": [
+    "We are going to tune :\n",
+    "\n",
+    "1. LogisticRegression()\n",
+    "2. RandomForestClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "61e058d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a hyperparameter grid for LogisticRegression\n",
+    "\n",
+    "log_reg_grid = {\"C\" : np.logspace(-4, 4, 20),\n",
+    "                \"solver\" : ['liblinear']}\n",
+    "\n",
+    "# Create a hyperparameter grid for Randomforestclassifier\n",
+    "\n",
+    "rf_grid = {\"n_estimators\": np.arange(10, 1000, 50),\n",
+    "           \"max_depth\" : [None, 3, 5, 10],\n",
+    "           \"min_samples_split\" : np.arange(2, 20, 2),\n",
+    "           \"min_samples_leaf\" : np.arange(1, 20, 2)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ccdaff0",
+   "metadata": {},
+   "source": [
+    "We now have our `hyperparameter grids` for each of our ML models. Let's tune them with RandomisedSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "67796f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=LogisticRegression(), n_iter=20,\n",
+       "                   param_distributions={'C': array([1.00000000e-04, 2.63665090e-04, 6.95192796e-04, 1.83298071e-03,\n",
+       "       4.83293024e-03, 1.27427499e-02, 3.35981829e-02, 8.85866790e-02,\n",
+       "       2.33572147e-01, 6.15848211e-01, 1.62377674e+00, 4.28133240e+00,\n",
+       "       1.12883789e+01, 2.97635144e+01, 7.84759970e+01, 2.06913808e+02,\n",
+       "       5.45559478e+02, 1.43844989e+03, 3.79269019e+03, 1.00000000e+04]),\n",
+       "                                        'solver': ['liblinear']},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tune LogisticRegression\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Setup random hyperparameter search for LogisticRegression model\n",
+    "log_reg_rs  = RandomizedSearchCV(LogisticRegression(),\n",
+    "                                 param_distributions=log_reg_grid,\n",
+    "                                 cv = 5,\n",
+    "                                 n_iter = 20,\n",
+    "                                 verbose= True)\n",
+    "\n",
+    "# Fit random hyperparameter search model for LogisticRegression\n",
+    "log_reg_rs.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b13c98e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'solver': 'liblinear', 'C': 0.23357214690901212}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg_rs.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8acf504c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8852459016393442"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg_rs.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6464f94f",
+   "metadata": {},
+   "source": [
+    "`So it's the same as before`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9534cbf8",
+   "metadata": {},
+   "source": [
+    "We've tuned Logistic Regression model.\n",
+    "\n",
+    "Now let us do the same for RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ceaf71c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, estimator=RandomForestClassifier(), n_iter=20,\n",
+       "                   param_distributions={'max_depth': [None, 3, 5, 10],\n",
+       "                                        'min_samples_leaf': array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19]),\n",
+       "                                        'min_samples_split': array([ 2,  4,  6,  8, 10, 12, 14, 16, 18]),\n",
+       "                                        'n_estimators': array([ 10,  60, 110, 160, 210, 260, 310, 360, 410, 460, 510, 560, 610,\n",
+       "       660, 710, 760, 810, 860, 910, 960])},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tune RandomForestClassifier\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Setting up hyperparameter search for RandomForestClassifier model\n",
+    "rf_rs = RandomizedSearchCV(RandomForestClassifier(),\n",
+    "                           param_distributions = rf_grid,\n",
+    "                           cv = 5,\n",
+    "                           n_iter = 20,\n",
+    "                           verbose= True)\n",
+    "# Fit the hyperparameter search model\n",
+    "rf_rs.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "13f9effb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 210,\n",
+       " 'min_samples_split': 4,\n",
+       " 'min_samples_leaf': 19,\n",
+       " 'max_depth': 3}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Finding best fit\n",
+    "\n",
+    "rf_rs.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c2b05355",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8688524590163934"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_rs.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0010ac6",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
