commit - hyperparameter tuning using GridSearchCV

--- a/main-notebook.ipynb
+++ b/main-notebook.ipynb
@@ -2789,11 +2789,125 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a0010ac6",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## **9. Hyperparameter Tuning using GridSearchCV**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "039574ae",
+   "metadata": {},
+   "source": [
+    "Since, our LogisticRegression model provides us with the best scores so far, we'll try and improve them again using GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "13b2ba8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=LogisticRegression(),\n",
+       "             param_grid={'C': array([1.00000000e-04, 1.88739182e-04, 3.56224789e-04, 6.72335754e-04,\n",
+       "       1.26896100e-03, 2.39502662e-03, 4.52035366e-03, 8.53167852e-03,\n",
+       "       1.61026203e-02, 3.03919538e-02, 5.73615251e-02, 1.08263673e-01,\n",
+       "       2.04335972e-01, 3.85662042e-01, 7.27895384e-01, 1.37382380e+00,\n",
+       "       2.59294380e+00, 4.89390092e+00, 9.23670857e+00, 1.74332882e+01,\n",
+       "       3.29034456e+01, 6.21016942e+01, 1.17210230e+02, 2.21221629e+02,\n",
+       "       4.17531894e+02, 7.88046282e+02, 1.48735211e+03, 2.80721620e+03,\n",
+       "       5.29831691e+03, 1.00000000e+04]),\n",
+       "                         'solver': ['liblinear']},\n",
+       "             verbose=True)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Different hyperparameters for our LogisticRegression model\n",
+    "log_reg_grid = {\"C\" : np.logspace(-4, 4, 30),\n",
+    "                \"solver\" : ['liblinear']}\n",
+    "\n",
+    "# Setup hyperparameter search for LogisticRegression\n",
+    "log_reg_gs = GridSearchCV(LogisticRegression(),\n",
+    "                          param_grid= log_reg_grid,\n",
+    "                          cv= 5,\n",
+    "                          verbose = True)\n",
+    "# Fit hyperparameter search model\n",
+    "log_reg_gs.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2ac24df4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the best hyperparameters \n",
+    "log_reg_gs.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5f09b32b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8852459016393442"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate grid search for LogisticRegression model\n",
+    "log_reg_gs.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3368944",
+   "metadata": {},
+   "source": [
+    "We are _still_ at the exact same result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d3e7f4b",
+   "metadata": {},
    "source": []
   }
  ],
