commit - exporting model

--- a/main-notebook.ipynb
+++ b/main-notebook.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c027847a",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c0031aec",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1a7ba056",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "(303, 14)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4b359e10",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
        "[303 rows x 14 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "59a045a1",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "acc3c581",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "78003867",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4bf8b171",
    "metadata": {},
    "outputs": [
@@ -970,7 +970,7 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "18b5e5cc",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1001,7 @@
        "Name: sex, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c0401ec5",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
        "1       72   93"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5cf38eb2",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7e21730e",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ab97ab8a",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "056d8d59",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
        "3         7  16"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c6a6dae9",
    "metadata": {},
    "outputs": [
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d21c25a5",
    "metadata": {},
    "outputs": [
@@ -1683,7 +1683,7 @@
        "target   -0.344029  1.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b0f915f0",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1705,7 @@
        "(14.5, -0.5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "33ca0312",
    "metadata": {},
    "outputs": [
@@ -1894,7 +1894,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d100ad43",
    "metadata": {},
    "outputs": [],
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "ae47d8d7",
    "metadata": {},
    "outputs": [],
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "1fed887e",
    "metadata": {},
    "outputs": [
@@ -2182,7 +2182,7 @@
        "[242 rows x 13 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2217,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "8abc45c4",
    "metadata": {},
    "outputs": [],
@@ -2256,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "e93e85ad",
    "metadata": {},
    "outputs": [
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "32254d20",
    "metadata": {},
    "outputs": [
@@ -2297,7 +2297,7 @@
        " 'Random Forest': 0.8360655737704918}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "d50e22d6",
    "metadata": {},
    "outputs": [
@@ -2326,7 +2326,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "24d68b70",
    "metadata": {},
    "outputs": [],
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "7e7906ad",
    "metadata": {},
    "outputs": [
@@ -2450,7 +2450,7 @@
        " 0.6694214876033058]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2461,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "de9508c1",
    "metadata": {},
    "outputs": [
@@ -2490,7 +2490,7 @@
        " 0.6557377049180327]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "c48e0f85",
    "metadata": {},
    "outputs": [
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "61e058d9",
    "metadata": {},
    "outputs": [],
@@ -2593,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "67796f22",
    "metadata": {},
    "outputs": [
@@ -2617,7 +2617,7 @@
        "                   verbose=True)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2640,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "b13c98e1",
    "metadata": {},
    "outputs": [
@@ -2650,7 +2650,7 @@
        "{'solver': 'liblinear', 'C': 0.23357214690901212}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2661,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "8acf504c",
    "metadata": {},
    "outputs": [
@@ -2671,7 +2671,7 @@
        "0.8852459016393442"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "ceaf71c1",
    "metadata": {},
    "outputs": [
@@ -2723,7 +2723,7 @@
        "                   verbose=True)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2745,7 +2745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "13f9effb",
    "metadata": {},
    "outputs": [
@@ -2758,7 +2758,7 @@
        " 'max_depth': 3}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2771,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "c2b05355",
    "metadata": {},
    "outputs": [
@@ -2781,7 +2781,7 @@
        "0.8688524590163934"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2808,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "13b2ba8d",
    "metadata": {},
    "outputs": [
@@ -2835,7 +2835,7 @@
        "             verbose=True)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2856,7 +2856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "2ac24df4",
    "metadata": {},
    "outputs": [
@@ -2866,7 +2866,7 @@
        "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2878,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "5f09b32b",
    "metadata": {},
    "outputs": [
@@ -2888,7 +2888,7 @@
        "0.8852459016393442"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2932,7 +2932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "ae5693fa",
    "metadata": {},
    "outputs": [
@@ -2944,7 +2944,7 @@
        "       1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2957,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "900bb00a",
    "metadata": {},
    "outputs": [
@@ -2983,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "a63ea6b5",
    "metadata": {},
    "outputs": [
@@ -3003,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "70868949",
    "metadata": {},
    "outputs": [
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "a52a2ae5",
    "metadata": {},
    "outputs": [
@@ -3073,7 +3073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "f64af63c",
    "metadata": {},
    "outputs": [
@@ -3083,7 +3083,7 @@
        "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3095,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "e6fd0da9",
    "metadata": {},
    "outputs": [],
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "9c996226",
    "metadata": {},
    "outputs": [
@@ -3117,7 +3117,7 @@
        "array([0.81967213, 0.90163934, 0.86885246, 0.88333333, 0.75      ])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3134,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "4a221144",
    "metadata": {},
    "outputs": [
@@ -3144,7 +3144,7 @@
        "0.8446994535519124"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3156,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "66638f2d",
    "metadata": {},
    "outputs": [
@@ -3166,7 +3166,7 @@
        "0.8207936507936507"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3185,7 +3185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "9f8d5a00",
    "metadata": {},
    "outputs": [
@@ -3195,7 +3195,7 @@
        "0.9212121212121213"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3214,7 +3214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "1e2006e7",
    "metadata": {},
    "outputs": [
@@ -3224,7 +3224,7 @@
        "0.8673007976269721"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3243,7 +3243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "bfb6be84",
    "metadata": {},
    "outputs": [
@@ -3291,7 +3291,7 @@
        "0  0.844699   0.820794  0.921212  0.867301"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3308,7 +3308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "7292c7de",
    "metadata": {},
    "outputs": [
@@ -3349,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "cebd9593",
    "metadata": {},
    "outputs": [
@@ -3496,7 +3496,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3507,7 +3507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "39b61ed2",
    "metadata": {},
    "outputs": [],
@@ -3522,7 +3522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "a5206304",
    "metadata": {},
    "outputs": [
@@ -3534,7 +3534,7 @@
        "         0.45051632, -0.63609908, -0.67663375]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3546,7 +3546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "id": "5dc447fa",
    "metadata": {},
    "outputs": [
@@ -3568,7 +3568,7 @@
        " 'thal': -0.6766337475895309}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3581,7 +3581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "id": "60296ebc",
    "metadata": {},
    "outputs": [
@@ -3603,11 +3603,92 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "65e7e731",
    "metadata": {},
+   "source": [
+    "## **12. Exporting our Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375655e2",
+   "metadata": {},
+   "source": [
+    "Now that we have completed our analysis on heart disease and built a model to predict the same, it is time to export or save this model so that we can use it in future projects or just as a valuable asset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cb88fea",
+   "metadata": {},
+   "source": [
+    "Since our model is not very big, we can save our model using the `pickle` library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "5f9b6828",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(clf, open(\"heart-disease-prediction-model.pkl\", 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89a34df",
+   "metadata": {},
+   "source": [
+    "We have successfully saved our model which is named : `heart-disease-prediction-model.pkl`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c23059bf",
+   "metadata": {},
+   "source": [
+    "To use this model, we can simply use the pickle library `load` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "75820edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To load our model\n",
+    "loaded_model = pickle.load(open(\"heart-disease-prediction-model.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "6e6ee381",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8852459016393442"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ae0d996",
+   "metadata": {},
    "source": []
   }
  ],
